Added the orders controller
